examples/pos/patternmatching/matching-overloaded.effekt
type A { X() }
type B { X() }

def main() = {
  val a: A = X()
  a match {
    case X() => println("X()")
  }
}