examples/neg/parsing/val-bad-type-correct-pos.effekt
val f: {This[Is(Not)A] match -ing type!} = <>
def main() = ()